Update tx-backend/src/main/java/org/eclipse/tractusx/traceability/qualitynotification/domain/base/model/QualityNotification.java
Co-authored-by: Lucas Capellino <137265091+ds-lcapellino@users.noreply.github.com>